test/error/pointer_unknown_arg.gw
typedef void(my_func)(unknown_type type);
